// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResultItem render missing version and labels 1`] = `

<div>
  <div class="group relative z-10">
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm relative group-hover:border-neutral-400 dark:group-hover:border-neutral-600 cursor-default"
    >
      <div class="p-6 m-0 px-4 py-3 rounded-t-lg flex flex-row items-center justify-between border-b-[1px]">
        <button
          data-state="closed"
          class="truncate"
        >
          <h3 class="font-semibold tracking-tight text-md truncate">
            item
          </h3>
        </button>
      </div>
      <div class="w-full h-12 flex items-center gap-4 justify-between border-t-[1px] px-4 py-3">
        <div class="flex gap-2">
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render stacked many 1`] = `

<div>
  <div class="group relative z-10">
    <div class="transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600 absolute border top-2 left-2 w-[97.5%] h-full bg-card rounded-lg">
    </div>
    <div class="transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600 absolute border top-1 left-1 w-[99%] h-full bg-card rounded-lg">
    </div>
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm relative group-hover:border-neutral-400 dark:group-hover:border-neutral-600 cursor-default"
    >
      <div class="p-6 m-0 px-4 py-3 rounded-t-lg flex flex-row items-center justify-between border-b-[1px]">
        <button
          data-state="closed"
          class="truncate"
        >
          <h3 class="font-semibold tracking-tight text-md truncate">
            many-edges-stacked
          </h3>
        </button>
      </div>
      <div class="w-full h-12 flex items-center gap-4 justify-between border-t-[1px] px-4 py-3">
        <button
          data-state="closed"
          class="rounded-sm border-[1px] px-2 py-1 text-[0.65rem] text-muted-foreground font-mono m-0 align-baseline truncate"
        >
          1.1.1
        </button>
        <div class="flex gap-2">
          <div>
            <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-lime-100 text-neutral-900 hover:bg-lime-100/80">
              peer
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render stacked two 1`] = `

<div>
  <div class="group relative z-10">
    <div class="transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600 absolute border top-1 left-1 w-[99%] h-full bg-card rounded-lg">
    </div>
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm relative group-hover:border-neutral-400 dark:group-hover:border-neutral-600 cursor-default"
    >
      <div class="p-6 m-0 px-4 py-3 rounded-t-lg flex flex-row items-center justify-between border-b-[1px]">
        <button
          data-state="closed"
          class="truncate"
        >
          <h3 class="font-semibold tracking-tight text-md truncate">
            two-edges-stacked
          </h3>
        </button>
      </div>
      <div class="w-full h-12 flex items-center gap-4 justify-between border-t-[1px] px-4 py-3">
        <button
          data-state="closed"
          class="rounded-sm border-[1px] px-2 py-1 text-[0.65rem] text-muted-foreground font-mono m-0 align-baseline truncate"
        >
          1.0.0
        </button>
        <div class="flex gap-2">
          <div>
            <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-fuchsia-100 text-neutral-900 hover:bg-fuchsia-100/80">
              dev
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render with item 1`] = `

<div>
  <div class="group relative z-10">
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm relative group-hover:border-neutral-400 dark:group-hover:border-neutral-600 cursor-default"
    >
      <div class="p-6 m-0 px-4 py-3 rounded-t-lg flex flex-row items-center justify-between border-b-[1px]">
        <button
          data-state="closed"
          class="truncate"
        >
          <h3 class="font-semibold tracking-tight text-md truncate">
            item
          </h3>
        </button>
      </div>
      <div class="w-full h-12 flex items-center gap-4 justify-between border-t-[1px] px-4 py-3">
        <button
          data-state="closed"
          class="rounded-sm border-[1px] px-2 py-1 text-[0.65rem] text-muted-foreground font-mono m-0 align-baseline truncate"
        >
          1.0.0
        </button>
        <div class="flex gap-2">
          <div>
            <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render with type 1`] = `

<div>
  <div class="group relative z-10">
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm relative group-hover:border-neutral-400 dark:group-hover:border-neutral-600 cursor-pointer"
    >
      <div class="p-6 m-0 px-4 py-3 rounded-t-lg flex flex-row items-center justify-between border-b-[1px]">
        <button
          data-state="closed"
          class="truncate"
        >
          <h3 class="font-semibold tracking-tight text-md truncate">
            item
          </h3>
        </button>
        <div class="flex items-center justify-center text-pretty rounded-md border-[1px] px-2.5 py-0.5 text-xs text-muted-foreground">
          <p class="font-semibold">
            <span>
              prod
            </span>
            <span class="font-medium px-1 text-muted-foreground">
              dep of:
            </span>
            <span>
              npm:from@1.0.0
            </span>
          </p>
        </div>
      </div>
      <div class="w-full h-12 flex items-center gap-4 justify-between border-t-[1px] px-4 py-3">
        <button
          data-state="closed"
          class="rounded-sm border-[1px] px-2 py-1 text-[0.65rem] text-muted-foreground font-mono m-0 align-baseline truncate"
        >
          1.0.0
        </button>
        <div class="flex gap-2">
          <div>
            <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
              prod
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;
